fixed board/nav overflow on window-height reduction

--- a/assets/experimental.css
+++ b/assets/experimental.css
@@ -18,7 +18,7 @@ button {
 }
 
 #container {
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
 }
 
@@ -255,7 +255,6 @@ button {
 @media only screen and (min-width: 1024px) {
     #header {
         padding: 16px 0;
-        box-shadow: 0 -5px 15px black;
     }
     #title {
         font-size: 2em;
